# hanami

./: .gitignore  Cargo.toml  Makefile  x86_64-unknown-hanami-gnu.json
config/: grub.cfg  linker.ld
src/: console.rs  device.rs  heap.rs  klog.rs  lib.rs  old_console.rs  pic.rs  serial.rs  terminal.rs
src/asm/: boot.asm
