[package]
name = "hanami"
version = "0.1.0"
authors = ["Splitty <splittydev@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[dependencies]
rlibc = "1.0.0"
rcstring = "0.2.1"
cpuio = "0.2.0"
spin = "0.4.5"
lazy_static = { version = "0.2.2", features = ["spin_no_std"] }